--- a/InternalLogic/InternalLogicEngineLayer.csproj
+++ b/InternalLogic/InternalLogicEngineLayer.csproj
@@ -32,32 +32,8 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Chemistry, Version=1.0.50.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.50\lib\Chemistry.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MassSpectrometry, Version=1.0.50.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.50\lib\MassSpectrometry.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="MathNet.Numerics, Version=3.16.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MathNet.Numerics.3.16.0\lib\net40\MathNet.Numerics.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="mzIdentML, Version=1.0.50.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.50\lib\mzIdentML.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MzML, Version=1.0.50.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.50\lib\MzML.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Proteomics, Version=1.0.50.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.50\lib\Proteomics.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Spectra, Version=1.0.50.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.50\lib\Spectra.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -68,17 +44,33 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Thermo, Version=1.0.50.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.50\lib\Thermo.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="UsefulProteomicsDatabases, Version=1.0.50.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.50\lib\UsefulProteomicsDatabases.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Zlib.Portable, Version=1.11.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Zlib.Portable.1.11.0\lib\portable-net4+sl5+wp8+win8+wpa81+MonoTouch+MonoAndroid\Zlib.Portable.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="Chemistry">
+      <HintPath>..\packages\mzLib.1.0.52\lib\Chemistry.dll</HintPath>
+    </Reference>
+    <Reference Include="MassSpectrometry">
+      <HintPath>..\packages\mzLib.1.0.52\lib\MassSpectrometry.dll</HintPath>
+    </Reference>
+    <Reference Include="mzIdentML">
+      <HintPath>..\packages\mzLib.1.0.52\lib\mzIdentML.dll</HintPath>
+    </Reference>
+    <Reference Include="MzML">
+      <HintPath>..\packages\mzLib.1.0.52\lib\MzML.dll</HintPath>
+    </Reference>
+    <Reference Include="Proteomics">
+      <HintPath>..\packages\mzLib.1.0.52\lib\Proteomics.dll</HintPath>
+    </Reference>
+    <Reference Include="Spectra">
+      <HintPath>..\packages\mzLib.1.0.52\lib\Spectra.dll</HintPath>
+    </Reference>
+    <Reference Include="Thermo">
+      <HintPath>..\packages\mzLib.1.0.52\lib\Thermo.dll</HintPath>
+    </Reference>
+    <Reference Include="UsefulProteomicsDatabases">
+      <HintPath>..\packages\mzLib.1.0.52\lib\UsefulProteomicsDatabases.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
