--- a/MetaMorpheusGUI/MetaMorpheusGUI.csproj
+++ b/MetaMorpheusGUI/MetaMorpheusGUI.csproj
@@ -33,6 +33,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Chemistry, Version=1.0.53.0, Culture=neutral, processorArchitecture=AMD64">
