--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -94,7 +94,7 @@
     <Compile Include="AnalysisEngineTest.cs" />
     <Compile Include="ExclusionsTest.cs" />
     <Compile Include="MyPeptideTest.cs" />
-    <Compile Include="MyEngineTest.cs" />
+    <Compile Include="MyTaskTest.cs" />
     <Compile Include="RobTest.cs" />
     <Compile Include="CalibrationEngineTest.cs" />
     <Compile Include="SearchModesTest.cs" />
@@ -108,6 +108,7 @@
     <Compile Include="TestDataFile.cs" />
     <Compile Include="TestParentSpectrumMatch.cs" />
     <Compile Include="TestScan.cs" />
+    <Compile Include="MyEngineTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
