--- a/CMD/CMD.csproj
+++ b/CMD/CMD.csproj
@@ -39,32 +39,14 @@
     <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Chemistry, Version=1.0.209.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.209\lib\Chemistry.dll</HintPath>
-    </Reference>
     <Reference Include="FlashLFQ, Version=0.1.61.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\FlashLFQ.0.1.61\lib\net451\FlashLFQ.dll</HintPath>
     </Reference>
     <Reference Include="FluentCommandLineParser, Version=1.4.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentCommandLineParser.1.4.3\lib\net35\FluentCommandLineParser.dll</HintPath>
     </Reference>
-    <Reference Include="ManagedThermoHelperLayer, Version=1.0.209.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.209\lib\ManagedThermoHelperLayer.dll</HintPath>
-    </Reference>
-    <Reference Include="MassSpectrometry, Version=1.0.209.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.209\lib\MassSpectrometry.dll</HintPath>
-    </Reference>
     <Reference Include="MathNet.Numerics, Version=3.20.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MathNet.Numerics.3.20.0\lib\net40\MathNet.Numerics.dll</HintPath>
-    </Reference>
-    <Reference Include="mzIdentML, Version=1.0.209.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.209\lib\mzIdentML.dll</HintPath>
-    </Reference>
-    <Reference Include="MzLibUtil, Version=1.0.209.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.209\lib\MzLibUtil.dll</HintPath>
-    </Reference>
-    <Reference Include="MzML, Version=1.0.209.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.209\lib\MzML.dll</HintPath>
     </Reference>
     <Reference Include="NetSerializer, Version=4.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\NetSerializer.4.1.0\lib\net45\NetSerializer.dll</HintPath>
@@ -72,15 +54,6 @@
     </Reference>
     <Reference Include="Nett, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Nett.0.7.0\lib\Net40\Nett.dll</HintPath>
-    </Reference>
-    <Reference Include="pepXML, Version=1.0.209.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.209\lib\pepXML.dll</HintPath>
-    </Reference>
-    <Reference Include="Proteomics, Version=1.0.209.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.209\lib\Proteomics.dll</HintPath>
-    </Reference>
-    <Reference Include="Spectra, Version=1.0.209.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.209\lib\Spectra.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -91,15 +64,42 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Thermo, Version=1.0.209.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.209\lib\Thermo.dll</HintPath>
-    </Reference>
-    <Reference Include="UsefulProteomicsDatabases, Version=1.0.209.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.209\lib\UsefulProteomicsDatabases.dll</HintPath>
-    </Reference>
     <Reference Include="Zlib.Portable, Version=1.11.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Zlib.Portable.1.11.0\lib\portable-net4+sl5+wp8+win8+wpa81+MonoTouch+MonoAndroid\Zlib.Portable.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="Chemistry">
+      <HintPath>..\packages\mzLib.1.0.210\lib\Chemistry.dll</HintPath>
+    </Reference>
+    <Reference Include="ManagedThermoHelperLayer">
+      <HintPath>..\packages\mzLib.1.0.210\lib\ManagedThermoHelperLayer.dll</HintPath>
+    </Reference>
+    <Reference Include="MassSpectrometry">
+      <HintPath>..\packages\mzLib.1.0.210\lib\MassSpectrometry.dll</HintPath>
+    </Reference>
+    <Reference Include="mzIdentML">
+      <HintPath>..\packages\mzLib.1.0.210\lib\mzIdentML.dll</HintPath>
+    </Reference>
+    <Reference Include="MzLibUtil">
+      <HintPath>..\packages\mzLib.1.0.210\lib\MzLibUtil.dll</HintPath>
+    </Reference>
+    <Reference Include="MzML">
+      <HintPath>..\packages\mzLib.1.0.210\lib\MzML.dll</HintPath>
+    </Reference>
+    <Reference Include="pepXML">
+      <HintPath>..\packages\mzLib.1.0.210\lib\pepXML.dll</HintPath>
+    </Reference>
+    <Reference Include="Proteomics">
+      <HintPath>..\packages\mzLib.1.0.210\lib\Proteomics.dll</HintPath>
+    </Reference>
+    <Reference Include="Spectra">
+      <HintPath>..\packages\mzLib.1.0.210\lib\Spectra.dll</HintPath>
+    </Reference>
+    <Reference Include="Thermo">
+      <HintPath>..\packages\mzLib.1.0.210\lib\Thermo.dll</HintPath>
+    </Reference>
+    <Reference Include="UsefulProteomicsDatabases">
+      <HintPath>..\packages\mzLib.1.0.210\lib\UsefulProteomicsDatabases.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -129,18 +129,5 @@
     <PreBuildEvent>
     </PreBuildEvent>
   </PropertyGroup>
-  <Import Project="..\packages\mzLib.1.0.209\build\mzLib.targets" Condition="Exists('..\packages\mzLib.1.0.209\build\mzLib.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\mzLib.1.0.209\build\mzLib.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\mzLib.1.0.209\build\mzLib.targets'))" />
-  </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  <Import Project="..\packages\mzLib.1.0.210\build\mzLib.targets" Condition="Exists('..\packages\mzLib.1.0.210\build\mzLib.targets')" />
 </Project>
