--- a/Test/SlicedSearchTaskConfig.toml
+++ b/Test/SlicedSearchTaskConfig.toml
@@ -36,7 +36,7 @@ QuantifyPpmTol = 5.0
 DoHistogramAnalysis = false
 SearchTarget = true
 SearchDecoy = true
-MassDiffAcceptors = ["5ppmAroundZero ppmAroundZero 5"]
+MassDiffAcceptors = "5ppmAroundZero ppmAroundZero 5"
 WritePrunedDatabase = false
 KeepAllUniprotMods = true
 DoLocalizationAnalysis = true
