--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddCompIonsTest.cs" />
+    <Compile Include="RfCalibrationFunctionTest.cs" />
     <Compile Include="ModificationAnalysisTest.cs" />
     <Compile Include="AnalysisEngineTest.cs" />
     <Compile Include="FdrTest.cs" />
