--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: csharp
 mono: none
 dotnet: 2.0.0
 install:
-- dotnet restore MetaMorpheus.sln -r linux-x64
+- dotnet restore MetaMorpheus.sln
 script:
-- dotnet build /p:Configuration=TestAndReleaseLinux MetaMorpheus.sln
+- dotnet build /p:Configuration=TestAndReleaseLinux MetaMorpheus.sln  -f netcoreapp2.0 
 - dotnet CMD/bin/Release/netcoreapp2.0/CMD.dll -t Examples/Task1SearchExample.toml Examples/Task2CalibrationExample.toml Examples/Task3SearchExample.toml Examples/Task4GptmdExample.toml Examples/Task5SearchExample.toml -s Examples/example.mzML -d Examples/mouse-10.xml
 deploy:
   provider: releases
