--- a/CMD/CMD.csproj
+++ b/CMD/CMD.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FlashLFQ" Version="0.1.98" />
     <PackageReference Include="FluentCommandLineParser" Version="1.4.3" />
     <PackageReference Include="mzLib" Version="1.0.246" />
     <PackageReference Include="Nett" Version="0.8.0" />
