--- a/GUI/packages.config
+++ b/GUI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FlashLFQ" version="0.1.98" targetFramework="net461" />
   <package id="MathNet.Numerics" version="3.20.0" targetFramework="net451" />
   <package id="mzLib" version="1.0.246" targetFramework="net461" />
   <package id="Nett" version="0.8.0" targetFramework="net451" />
