--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FlashLFQ" Version="0.1.98" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="mzLib" Version="1.0.246" />
     <PackageReference Include="NUnit" Version="3.8.1" />
